separated container from main card

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -81,6 +81,9 @@ const { title } = Astro.props
 
     .ccontainer {
         @apply m-auto p-6 max-w-[80ch];
+    }
+
+    main {
         @apply bg-gray-medium rounded-lg shadow-lg shadow-gray-darkest;
     }
 
