--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -7,7 +7,7 @@ const allPosts = await getCollection("blog")
 ---
 
 <Layout title="Archive">
-    <main class="ccontainer flex flex-col gap-8">
+    <main class="ccontainer mflat-panel flex flex-col gap-8">
         <div class="flex items-center gap-3">
             <h1 class="text-offwhite font-nasa text-3xl">Archive</h1>
             <div class="border-t-2 border-offwhite flex-grow h-1/2"></div>
