--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -8,7 +8,7 @@ allPosts = allPosts.slice(1, 4)
 ---
 
 <Layout title="Home">
-    <main class="ccontainer">
+    <main class="ccontainer mflat-panel">
         <section id="latest-post">
             <h2 class="text-offwhite">Latest post</h2>
             {
