--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -3,7 +3,7 @@ import Layout from "../../layouts/Layout.astro"
 ---
 
 <Layout title="tags">
-    <main class="ccontainer">
+    <main class="ccontainer mflat-panel">
         <p>sdadsads</p>
     </main>
 </Layout>
