--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -83,7 +83,7 @@ const { title } = Astro.props
         @apply m-auto p-6 max-w-[80ch];
     }
 
-    main {
+    .mflat-panel {
         @apply bg-gray-medium rounded-lg shadow-lg shadow-gray-darkest;
     }
 
