--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -22,9 +22,19 @@ const { posts } = Astro.props
 const filteredPosts = posts.filter((post) =>
     post.data.tags.find((t) => t.slug == tag)
 )
+const postsCount = filteredPosts.length
 ---
 
 <Layout title={tag as string}>
-    <p>Posts tagged with {tag}</p>
-    {filteredPosts.map((post) => <p>{post.data.title}</p>)}
+    <main class="ccontainer mflat-panel">
+        <div class="flex items-center gap-3">
+            <h1 class="text-offwhite font-nasa text-3xl uppercase">#{tag}</h1>
+            <div class="border-t-2 border-offwhite flex-grow h-1/2"></div>
+        </div>
+        <div class="flex justify-between">
+            <p class="text-offwhite">{postsCount} posts tagged with {tag}</p>
+            <p class="text-offwhite">See all tags</p>
+        </div>
+        {filteredPosts.map((post) => <p>{post.data.title}</p>)}
+    </main>
 </Layout>
