--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -30,7 +30,7 @@ import Avatar from "./Avatar.astro"
             <nav class="half-nav">
                 <ul>
                     <li><a href="#">Projects</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="/about">About</a></li>
                 </ul>
             </nav>
         </div>
@@ -40,7 +40,7 @@ import Avatar from "./Avatar.astro"
             <li><a href="/dev">Home</a></li>
             <li><a href="#">Archive</a></li>
             <li><a href="#">Projects</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="/about">About</a></li>
         </ul>
     </nav>
 </header>
