--- a/src/layouts/Empty.astro
+++ b/src/layouts/Empty.astro
@@ -49,21 +49,7 @@ const { title } = Astro.props
     :root {
     }
     html {
-        /* Lawrencium */
-        background: theme("colors.gray.medium"); /* fallback for old browsers */
-        background: -webkit-linear-gradient(
-            to right,
-            theme("colors.gray.medium"),
-            theme("colors.gray.light") 45% 55%,
-            theme("colors.gray.medium")
-        ); /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(
-            to right,
-
-            theme("colors.gray.medium"),
-            /* theme("colors.gray.light") 45% 55%, */
-                theme("colors.gray.medium")
-        ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        background-color: theme("colors.gray.medium");
     }
     body {
         min-height: 100vh;
