--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,6 +52,39 @@ const { title } = Astro.props
         font-display: swap;
     }
 
+    @font-face {
+        font-family: SpaceMono;
+        src: url("/fonts/Space_Mono/SpaceMono-Bold.ttf") format("truetype");
+        font-weight: bold;
+        font-style: normal;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: SpaceMono;
+        src: url("/fonts/Space_Mono/SpaceMono-BoldItalic.ttf")
+            format("truetype");
+        font-weight: bold;
+        font-style: italic;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: SpaceMono;
+        src: url("/fonts/Space_Mono/SpaceMono-Italic.ttf") format("truetype");
+        font-weight: normal;
+        font-style: italic;
+        font-display: swap;
+    }
+
+    @font-face {
+        font-family: SpaceMono;
+        src: url("/fonts/Space_Mono/SpaceMono-Regular.ttf") format("truetype");
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+    }
+
     :root {
     }
 
@@ -77,14 +110,12 @@ const { title } = Astro.props
         min-height: 100vh;
         font-family: "Quicksand";
         position: relative;
+
+        color: theme("colors.offwhite");
     }
 
     .ccontainer {
         @apply m-auto p-6 max-w-[80ch];
-    }
-
-    .mflat-panel {
-        @apply bg-gray-medium rounded-lg shadow-lg shadow-gray-darkest;
     }
 
     code {
