--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,4 +1,5 @@
 ---
+import FlatPanel from "../../components/FlatPanel.astro"
 import Layout from "../../layouts/Layout.astro"
 import { CollectionEntry, getCollection } from "astro:content"
 
@@ -26,15 +27,21 @@ const postsCount = filteredPosts.length
 ---
 
 <Layout title={tag as string}>
-    <main class="ccontainer mflat-panel">
-        <div class="flex items-center gap-3">
-            <h1 class="text-offwhite font-nasa text-3xl uppercase">#{tag}</h1>
-            <div class="border-t-2 border-offwhite flex-grow h-1/2"></div>
-        </div>
-        <div class="flex justify-between">
-            <p class="text-offwhite">{postsCount} posts tagged with {tag}</p>
-            <p class="text-offwhite">See all tags</p>
-        </div>
-        {filteredPosts.map((post) => <p>{post.data.title}</p>)}
+    <main class="ccontainer">
+        <FlatPanel>
+            <div class="flex items-center gap-3">
+                <h1 class="text-offwhite font-nasa text-3xl uppercase">
+                    #{tag}
+                </h1>
+                <div class="border-t-2 border-offwhite flex-grow h-1/2"></div>
+            </div>
+            <div class="flex justify-between">
+                <p class="text-offwhite">
+                    {postsCount} posts tagged with {tag}
+                </p>
+                <p class="text-offwhite"><a href="/tags">See all tags</a></p>
+            </div>
+            {filteredPosts.map((post) => <p>{post.data.title}</p>)}
+        </FlatPanel>
     </main>
 </Layout>
