--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -1,9 +1,12 @@
 ---
+import FlatPanel from "../../components/FlatPanel.astro"
 import Layout from "../../layouts/Layout.astro"
 ---
 
 <Layout title="tags">
-    <main class="ccontainer mflat-panel">
-        <p>sdadsads</p>
+    <main class="ccontainer">
+        <FlatPanel>
+            <p>sdadsads</p>
+        </FlatPanel>
     </main>
 </Layout>
