--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -5,52 +5,64 @@ import H1 from "../../components/Typography/H1.astro"
 import Layout from "../../layouts/Layout.astro"
 ---
 
-<Layout title="tags">
+<Layout title="about">
     <main class="ccontainer">
         <FlatPanel>
             <Divider>
                 <H1 slot="before">Personnel File</H1>
             </Divider>
-            <div
-                class="flex flex-col-reverse gap-4 sm:flex-row sm:justify-between mt-4"
-            >
-                <div class="flex flex-col gap-3">
-                    <div>
-                        <label>name:</label>
-                        <p>Lucca Del Debbio</p>
-                    </div>
 
-                    <div>
-                        <label>date of birth:</label>
-                        <p>16/09/1997</p>
-                    </div>
-                    <div>
-                        <label>place of birth:</label>
-                        <p>São Paulo, Brazil</p>
-                    </div>
-
-                    <div>
-                        <label>Qualifications:</label>
-                        <p>Bachelor's Degree in Computer Science</p>
-                    </div>
-                    <div>
-                        <label>rank:</label>
-                        <p>Web/Game Developer at Hacker Rangers</p>
-                    </div>
-                </div>
+            <section id="about-info" class="mt-4">
                 <div
-                    class="border-2 border-blue-accent w-full relative max-w-[256px]"
+                    class="flex flex-col sm:flex-row-reverse sm:justify-between gap-3"
                 >
-                    <img src="./avatar2.jpg" />
-                    <div class="absolute bottom-0 w-full bg-blue-accent">
-                        <p
-                            class="font-space font-bold text-xs text-end text-gray-medium"
+                    <div
+                        class="self-center sm:self-start border-2 border-blue-accent w-full relative max-w-[300px]"
+                    >
+                        <img src="./avatar2.jpg" />
+                        <div class="absolute bottom-0 w-full bg-blue-accent">
+                            <p
+                                class="font-space font-bold text-xs text-end text-gray-medium"
+                            >
+                                FILE ID: 12314562
+                            </p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col gap-3">
+                        <div>
+                            <label>name:</label>
+                            <p>Lucca Del Debbio</p>
+                        </div>
+                        <div
+                            class="grid grid-cols-2 sm:grid-cols-1 md:grid-cols-2 gap-3"
                         >
-                            FILE ID: 12314562
-                        </p>
+                            <div>
+                                <label>date of birth:</label>
+                                <p>16/09/1997</p>
+                            </div>
+                            <div>
+                                <label>place of birth:</label>
+                                <p>São Paulo, Brazil</p>
+                            </div>
+                        </div>
+                        <div>
+                            <label>rank:</label>
+                            <p>
+                                Web/Game Developer at <a
+                                    href="https://hackerrangers.com"
+                                    class="font-squada uppercase text-lg whitespace-nowrap"
+                                    ><span class="text-hr-blue">HACK3R_</span>
+                                    <span class="text-hr-pink">RANGER5</span></a
+                                >
+                            </p>
+                        </div>
+                        <div>
+                            <label>Qualifications:</label>
+                            <p>Bachelor's Degree in Computer Science</p>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </section>
         </FlatPanel>
     </main>
 </Layout>
