Search component, dont know how will i integrate it with dynamic search

--- a/src/components/Typography/H1.astro
+++ b/src/components/Typography/H1.astro
@@ -1,3 +1,9 @@
-<h1 class="font-nasa text-offwhite text-3xl">
+---
+import type { HTMLAttributes } from "astro/types"
+export type Props = HTMLAttributes<"h1">
+const { class: className, ...rest } = Astro.props
+---
+
+<h1 class:list={["font-nasa text-offwhite text-3xl", className]} {...rest}>
     <slot />
 </h1>
