--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -35,7 +35,7 @@ const { post } = Astro.props
         <img
             src={post.data.image.src}
             alt={post.data.image.alt}
-            class="border-2 border-offwhite relative flex-shrink-0 h-full object-cover"
+            class="border-2 border-offwhite relative h-full flex-shrink-0 object-cover aspect-[4/3]"
         />
         <div class="flex-grow flex flex-col gap-2 relative pb-9">
             <div class="flex justify-between gap-2">
@@ -122,7 +122,7 @@ const { post } = Astro.props
             }
 
             .content-wrapper img {
-                aspect-ratio: 4/3;
+                @apply w-auto;
             }
         }
 
