img with relative path

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -21,7 +21,7 @@ const dateOfBirth = new Date("1997-09-16T21:00:00")
                     <div
                         class="self-center sm:self-start border-2 border-blue-accent w-full relative max-w-[300px]"
                     >
-                        <img src="./avatar2.jpg" />
+                        <img src="/avatar2.jpg" />
                         <div class="absolute bottom-0 w-full bg-blue-accent">
                             <p
                                 class="font-space font-bold text-xs text-end text-gray-medium"
