--- a/src/pages/archive/index.astro
+++ b/src/pages/archive/index.astro
@@ -1,36 +1,31 @@
 ---
 import { getCollection } from "astro:content"
 import Layout from "../../layouts/Layout.astro"
-import Card from "../../components/Card.astro"
+// import Card from "../../components/Card.astro"
 import FlatPanel from "../../components/FlatPanel.astro"
 import H1 from "../../components/Typography/H1.astro"
 import Divider from "../../components/Divider.astro"
-import Search from "../../components/Inputs/Search.astro"
+import SearchList from "../../components/SearchList/SearchList"
 const allPosts = await getCollection("blog")
 ---
 
 <Layout title="Archive">
     <main class="ccontainer">
-        <FlatPanel className="flex flex-col gap-8">
+        <FlatPanel className="flex flex-col gap-2">
             <Divider>
                 <H1 slot="before">Archive</H1>
             </Divider>
-            <div class="flex justify-end">
-                <Search />
-            </div>
-            <ul role="list" class="link-card-grid">
-                {allPosts.map((post) => <Card post={post} />)}
-            </ul>
+            <SearchList client:only="react" posts={allPosts} />
         </FlatPanel>
     </main>
+
+    <style>
+        .link-card-grid {
+            @apply grid grid-cols-1 sm:grid-cols-2 gap-8;
+        }
+
+        .clip {
+            @apply w-10 h-10 absolute bg-black;
+        }
+    </style>
 </Layout>
-
-<style>
-    .link-card-grid {
-        @apply grid grid-cols-1 sm:grid-cols-2 gap-8;
-    }
-
-    .clip {
-        @apply w-10 h-10 absolute bg-black;
-    }
-</style>
