--- a/src/pages/dev/index.astro
+++ b/src/pages/dev/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "../../layouts/Layout.astro"
-import Card from "../../components/Card.astro"
+import Card from "../../components/Card/Card"
 import { getCollection } from "astro:content"
 import FlatPanel from "../../components/FlatPanel.astro"
 let allPosts = await getCollection("blog")
