--- a/src/components/Inputs/Search.module.css
+++ b/src/components/Inputs/Search.module.css
@@ -3,7 +3,7 @@
     @apply border border-offwhite rounded-full opacity-75;
     transition: max-width 1s ease, padding 0.7s ease, opacity 0.7s ease;
 }
-.searchWrapper:has(.search:not(:placeholder-shown)),
+.searchWrapper:has(.searchInput:not(:placeholder-shown)),
 .searchWrapper:hover,
 .searchWrapper:focus-within {
     @apply pl-4 opacity-100;
@@ -12,7 +12,7 @@
 
 /* Search Icon */
 .searchIcon {
-    @apply w-6 flex-shrink-0 opacity-100 hover:text-blue-accent;
+    @apply flex-shrink-0 opacity-100 hover:text-blue-accent;
 }
 .searchWrapper:hover .searchIcon,
 .searchWrapper:focus-within .searchIcon {
@@ -21,32 +21,32 @@
 
 /* Clear Icon */
 .clearIcon {
-    @apply absolute right-0 opacity-0 hover:text-blue-accent;
+    @apply absolute right-0 opacity-0 hover:text-blue-accent pointer-events-none;
     transition: opacity 0.3s ease;
 }
-.search:not(:placeholder-shown) + .clearIcon {
-    @apply opacity-100;
+.searchInput:not(:placeholder-shown) + .clearIcon {
+    @apply opacity-100 pointer-events-auto;
 }
 
 /* Input */
-.search {
+.searchInput {
     @apply bg-transparent max-w-full w-full;
     transition: padding 0.7s ease;
 }
-.search::-webkit-search-cancel-button {
+.searchInput::-webkit-search-cancel-button {
     display: none;
 }
-.search:focus {
+.searchInput:focus {
     outline: none;
 }
-.search::placeholder {
+.searchInput::placeholder {
     @apply text-transparent opacity-75;
     transition: color 1s;
 }
-.search:not(:placeholder-shown),
+.searchInput:not(:placeholder-shown),
 .searchWrapper:hover .search,
 .searchWrapper:focus-within .search {
-    @apply pr-6;
+    @apply pr-7;
 }
 .searchWrapper:hover .search::placeholder,
 .searchWrapper:focus-within .search::placeholder {
