created an anchor component

--- a/src/components/Card/Card.astro
+++ b/src/components/Card/Card.astro
@@ -101,7 +101,7 @@ const { post } = Astro.props
     .title {
         @apply m-3 pl-2 block bg-offwhite;
         @apply flex flex-wrap items-end gap-2;
-        @apply font-nasa uppercase text-gray-medium;
+        @apply font-nasa uppercase text-gray-medium text-start;
     }
 
     .title a {
