--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,9 +1,10 @@
 ---
 import Avatar from "./Header/Avatar.astro"
+import avatarImg from "../assets/images/avatar2.jpg"
 ---
 
 <section id="info-lucca">
-    <Avatar size={80} src="/avatar2.jpg" />
+    <Avatar size={80} src={avatarImg} />
     <h2 class="font-display text-center mt-4">
         <span class="firstName">Lucca</span><span class="lastName">
             Del Debbio</span
