--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,6 @@
 ---
-import Hero from "../components/Hero.astro"
-import Empty from "../layouts/Empty.astro"
+import BaseLayout from "../layouts/baseLayout.astro"
 ---
-
-<Empty title="Lucca Del Debbio">
-    <div class="h-screen w-screen flex flex-col justify-center">
-        <h1
-            class="text-white font-bold text-3xl sm:text-6xl font-mono text-center"
-        >
-            UNDER MAINTENANCE
-        </h1>
-        <p class="text-offwhite text-lg sm:text-xl text-center mb-8">
-            Soon to be a site by:
-        </p>
-        <Hero />
-    </div>
-</Empty>
-
-<style></style>
+<BaseLayout title="test">
+	<p>hello</p>
+</BaseLayout>
