fonts and empty layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
-import BaseLayout from "../layouts/baseLayout.astro"
+import BaseLayout from "../layouts/baseLayout.astro";
 ---
+
 <BaseLayout title="test">
-	<p>hello</p>
+    <p class="">hello</p>
 </BaseLayout>
