--- a/src/layouts/emptyLayout.astro
+++ b/src/layouts/emptyLayout.astro
@@ -1,11 +1,11 @@
 ---
-import "../styles/global.css"
+import "../styles/global.css";
 
 interface Props {
-    title: string
+    title: string;
 }
 
-const { title } = Astro.props
+const { title } = Astro.props;
 ---
 
 <html lang="en">
